# P2P-V2

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  DOCKER_DATA_PERSISTENCE.md  README.md  backup-databases.sh  backup_postgres_20250809_121327.sql  docker-compose.prod.yml  docker-compose.yml  docker-control.sh  frontend-spec.md  hamza_changes_Needed.md  init-databases.sh  restore-databases.sh  update-claude-code.sh
docker/: init-db.sql  (+4 more)
p2p-backend-app/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  conftest.py  create_test_data.py  debug_models.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start-docker-with-claude.sh  test_auth_integration.py  test_auth_suite_comprehensive.py  test_email_verification_functionality.py  test_file_upload.py  test_logging.py  test_password_reset_functionality.py  test_rbac_functionality.py  test_session_management.py  use-cases.json
p2p-backend-app/alembic/: env.py
p2p-backend-app/app/: main.py
p2p-backend-app/app/api/: __init__.py
p2p-backend-app/docs/: CONTAINER_SETUP.md
p2p-backend-app/scripts/: README.md  add_forum_replies.py  check-health.sh  create_database.py  init-mongo.js  init-postgres.sql  init_db.py  link_supertokens_users.py  publish_last_draft.py  seed_all.py  seed_db.py  seed_db_users.py  seed_forum.py  seed_forums.py  seed_organizations.py  seed_supertokens_users.py  seed_use_cases.py  seed_usecases.py  seed_user_activities.py  seed_users.py  start-backend.sh  stop-backend.sh  troubleshoot-backend.sh
(+252 files in other folders)
